fix cmakelist wrong package name

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -165,10 +165,10 @@ endif()
 # package stage
 if(WIN32)
     set(CPACK_GENERATOR "ZIP")
-    set(CPACK_PACKAGE_FILE_NAME "plugIN-hello-${PLUGIN_SDK_VERSION}-win-${CMAKE_GENERATOR_PLATFORM}")
+    set(CPACK_PACKAGE_FILE_NAME "plugIN-hello-${PLUGIN_VERSION}-win-${CMAKE_GENERATOR_PLATFORM}")
 elseif(UNIX AND NOT APPLE)
     set(CPACK_GENERATOR "TGZ")
-    set(CPACK_PACKAGE_FILE_NAME "plugIN-hello-${PLUGIN_SDK_VERSION}-linux-${CMAKE_HOST_SYSTEM_PROCESSOR}")
+    set(CPACK_PACKAGE_FILE_NAME "plugIN-hello-${PLUGIN_VERSION}-linux-${CMAKE_HOST_SYSTEM_PROCESSOR}")
 endif()
 
 set(CPACK_INCLUDE_TOPLEVEL_DIRECTORY OFF)
