revert to jetson dockerfile

--- a/Dockerfile.jetson
+++ b/Dockerfile.jetson
@@ -1,4 +1,4 @@
-FROM --platform=linux/arm64 ubuntu:20.04 AS install-dependency
+FROM --platform=linux/arm64 nvcr.io/nvidia/l4t-base:r32.6.1 AS install-dependency
 RUN apt-get update && apt-get install -y \
 	wget \
 	g++ \
