--- a/Dockerfile.jetson
+++ b/Dockerfile.jetson
@@ -6,6 +6,7 @@ RUN apt-get update && apt-get install -y \
 	g++ \
 	make \
 	libssl-dev \
+	git \
 	&& rm -rf /var/lib/apt/lists/*
 RUN wget --no-check-certificate https://github.com/Kitware/CMake/releases/download/v3.23.2/cmake-3.23.2-linux-aarch64.tar.gz
 RUN tar -xf cmake-3.23.2-linux-aarch64.tar.gz && cp -r cmake-3.23.2-linux-aarch64/* /usr
