--- a/Dockerfile.x86_64
+++ b/Dockerfile.x86_64
@@ -11,10 +11,12 @@ RUN wget https://github.com/Kitware/CMake/releases/download/v3.23.2/cmake-3.23.2
 RUN tar -xf cmake-3.23.2-linux-x86_64.tar.gz && cp -r cmake-3.23.2-linux-x86_64/* /usr
 
 FROM install-dependency AS build-stage
+ARG OCTO_SDK_VERSION=3.1.0
 COPY . /app
 WORKDIR /app
-RUN cmake -S . -B build -DCMAKE_BUILD_TYPE=release -DPLUGIN_KEY=plugin_credential.json
+RUN cmake -S . -B build -DCMAKE_BUILD_TYPE=release -DPLUGIN_KEY=plugin_credential.json -DOCTO_SDK_VERSION=$OCTO_SDK_VERSION
 RUN cmake --build build --target package
 
 FROM scratch AS output-stage
-COPY --from=build-stage /app/build/*.tar.gz / 
+ARG OUTPUT_NAME
+COPY --from=build-stage /app/build/*.tar.gz /$OUTPUT_NAME
